# delivery_service

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: config.yaml
config/box_packer/: greedy.yaml  simple.yaml
config/hydra/job_logging/: log.yaml
delivery_box/: __main__.py  app.py  box_packer.py  config.py  delivery_car.py  exceptions.py  package_generator.py
tests/: test_delivery_car.py
